# pj_mngmnt

./: .gitignore  README.md  angular.json  database.db  package-lock.json  package.json  structure.txt
backend/: database.db  main.py  pyproject.toml
backend/schema/: project.py  task.py
backend/schema/session/: start_session.py
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
src/app/components/about/: about.component.html  about.component.scss  about.component.ts
src/app/components/header/: header.component.html  header.component.scss
src/app/components/home/: home.component.html  home.component.scss  home.component.ts
src/app/components/landing/: landing.component.html  landing.component.scss
src/app/components/projects/: projects.component.ts
src/app/components/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
src/app/dialogs/new-project/: new-project.component.html  new-project.component.scss  new-project.component.ts
src/app/dialogs/new-task/: new-task.component.html  new-task.component.scss  new-task.component.ts
src/app/dialogs/task/: task.component.html  task.component.scss  task.component.ts
src/app/model/: task.type.ts
src/app/service/: project.service.ts  sidebar-data.service.ts  task.service.ts
