[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ZR-Morris-Wang",email = "ppmmlzr@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "sqlmodel (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
